feat(server): update email templates

--- a/packages/api/src/main/resources/templates/auth/register-complete.mustache
+++ b/packages/api/src/main/resources/templates/auth/register-complete.mustache
@@ -25,13 +25,20 @@
 </head>
 <body>
 <div class="container">
-    <h2>edupayroll.com'a Hoş Geldiniz!</h2>
+    <h2>Hoş Geldiniz!</h2>
+
     <p>Merhaba {{name}},</p>
-    <p>Aramıza katıldığınız için çok heyecanlıyız. Özgürce hizmetlerimizi kullanabilir ve işlerinizi kolayca
-        halledebilirsiniz.</p>
-    <p>Uygulamamızı keşfedin ve bir üye olmanın avantajlarından yararlanın. Size destek olmak ve harika bir deneyim
-        yaşamanızı sağlamak için buradayız.</p>
-    <p>Teşekkürler,<br>edupayroll.com</p>
+    <p>Aramıza katıldığınız için heyecanlıyız. Hizmetlerimizi dilediğiniz gibi kullanabilir ve işlerinizi kolayca halledebilirsiniz.</p>
+    <p>Uygulamamızı keşfedin ve üyeliğin avantajlarından faydalanın. Size destek olmak ve mükemmel bir deneyim sunmak için buradayız.</p>
+    <p>Teşekkürler</p>
+
+    <hr style="margin-top: 20px; margin-bottom: 20px; border: 0; border-top: 1px solid #eee;">
+
+    <img
+        alt="edupayroll.com logo"
+        style="width: 256px; height: 72px;"
+        src="{{client_url}}{{client_logo_path}}"
+    >
 </div>
 </body>
 </html>
