--- a/packages/api/src/main/resources/templates/auth/register-confirmation.mustache
+++ b/packages/api/src/main/resources/templates/auth/register-confirmation.mustache
@@ -24,7 +24,7 @@
 
         .btn {
             display: inline-block;
-            background: #007bff;
+            background: #4c6ef5;
             color: #fff !important;
             padding: 10px 20px;
             text-decoration: none;
@@ -33,7 +33,7 @@
         }
 
         .btn:hover {
-            background: #0056b3;
+            background: #4c6ef5;
         }
 
         a.btn, a.btn:hover, a.btn:visited, a.btn:active {
@@ -44,12 +44,20 @@
 <body>
 <div class="container">
     <h2>E-posta Adresinizi Doğrulayın</h2>
+
     <p>Merhaba,</p>
-    <p>Bizimle bir hesap oluşturduğunuz için teşekkür ederiz! Kayıt işleminizi tamamlamak için lütfen aşağıdaki
-        bağlantıya tıklayın:</p>
-    <a href="{{verification_url}}" class="btn">Kayıt İşlemini Tamamla</a>
-    <p>Eğer bu işlemi siz yapmadıysanız, lütfen bu e-postayı göz ardı edin.</p>
-    <p>Teşekkürler,<br>edupayroll.com</p>
+    <p>Hesap oluşturduğunuz için teşekkür ederiz! Kayıt işleminizi tamamlamak için aşağıdaki bağlantıya tıklayın:</p>
+    <a href="{{verification_url}}" class="btn">Hesabınızı Onaylayın</a>
+    <p>Eğer bu talebi siz yapmadıysanız, lütfen bu e-postayı dikkate almayın.</p>
+    <p>Teşekkürler</p>
+
+    <hr style="margin-top: 20px; margin-bottom: 20px; border: 0; border-top: 1px solid #eee;">
+
+    <img
+        alt="edupayroll.com logo"
+        style="width: 256px; height: 72px;"
+        src="{{client_url}}{{client_logo_path}}"
+    >
 </div>
 </body>
 </html>
