--- a/packages/web/src/globals.scss
+++ b/packages/web/src/globals.scss
@@ -1,4 +1,5 @@
 @import '@mantine/core/styles.css';
+@import '@mantine/notifications/styles.css';
 
 :root {
 	--ff-title: 'DM Serif Display', serif;
